--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
+	<ion-fab vertical="bottom" horizontal="center" slot="fixed">
+		<ion-fab-button (click)="showKeyboard()">
+			<ion-icon name="keyboard"></ion-icon>
+		</ion-fab-button>
+	</ion-fab>
+
   <app-explore-container name="Armut dalda"></app-explore-container>
 </ion-content>
