--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,10 +6,10 @@
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
+		<ion-tab-button tab="tab2">
+			<ion-icon name="images"></ion-icon>
+			<ion-label>Photos</ion-label>
+		</ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="square"></ion-icon>
