--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,13 +14,13 @@
 	<ion-content>
 		<ion-grid>
 			<ion-row>
-				<ion-col size="6" *ngFor="let photo of photos; index as position">
+				<ion-col *ngFor="let photo of photos; index as position" size="6">
 					<ion-img src="{{ photo.webviewPath }}"></ion-img>
 				</ion-col>
 			</ion-row>
 		</ion-grid>
 
-		<ion-fab vertical="bottom" horizontal="center" slot="fixed">
+		<ion-fab horizontal="center" slot="fixed" vertical="bottom">
 			<ion-fab-button (click)="addPhotoToGallery()">
 				<ion-icon name="camera"></ion-icon>
 			</ion-fab-button>
