--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
 		<ion-title>
-			Tab 3
+			Tab 4
 		</ion-title>
 	</ion-toolbar>
 </ion-header>
@@ -9,17 +9,17 @@
 <ion-content [fullscreen]="true">
 	<ion-header collapse="condense">
 		<ion-toolbar>
-			<ion-title size="large">Tab 3</ion-title>
+			<ion-title size="large">Tab 4</ion-title>
 		</ion-toolbar>
 	</ion-header>
 
 	<ion-content>
 		<ion-fab horizontal="center" slot="fixed" vertical="bottom">
-			<ion-fab-button (click)="scanQrCode()">
-				<ion-icon name="qr-code-outline"></ion-icon>
+			<ion-fab-button>
+				<ion-icon name="snow-outline"></ion-icon>
 			</ion-fab-button>
 		</ion-fab>
 	</ion-content>
 
-	<app-explore-container name="Tab 3 page"></app-explore-container>
+	<app-explore-container name="Tab 4 page"></app-explore-container>
 </ion-content>
